[package]
name = "rustyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "^0.17"
ascii_utils = "^0.9"

[[bin]]
name = "rustyper"
path = "src/rustyper/main.rs"

[[bin]]
name = "pitch_drop"
path = "src/pitch_drop/main.rs"
